# zero-conf-lnd

./: .gitignore  Cargo.toml  README.md  example.yml
.github/workflows/: rust.yml
src/: config.rs  lnd.rs  main.rs
