[package]
name = "zero-conf-lnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic_openssl_lnd = "0.2.0"
tokio = "^1"
tokio-stream = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
anyhow = "1.0.66"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secp256k1 = "0.24.1"
